--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 *.docx
 **/.ipynb_checkpoints/
 *.py
+
+# To Untrack the virtual environments
+**/.venv/
+# To Untrack the Environment Variables
+**/.env
